[package]
name = "grpc"
version = "0.1.0"
authors = ["Huynh Quang Thao <huynhquangthao@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.4.2"
prost = "0.7"
tokio = { version = "1.5.0", features = ["full", "test-util"] }
tokio-test = "0.4.1"
rand = "0.8.3"

[build-dependencies]
tonic-build = "0.4.2"